// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPageSideBar is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPageSideBar testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiPageSideBar paddingSize l is rendered 1`] = `
<div
  class="euiPageSideBar euiPageSideBar--paddingLarge"
/>
`;

exports[`EuiPageSideBar paddingSize m is rendered 1`] = `
<div
  class="euiPageSideBar euiPageSideBar--paddingMedium"
/>
`;

exports[`EuiPageSideBar paddingSize none is rendered 1`] = `
<div
  class="euiPageSideBar"
/>
`;

exports[`EuiPageSideBar paddingSize s is rendered 1`] = `
<div
  class="euiPageSideBar euiPageSideBar--paddingSmall"
/>
`;

exports[`EuiPageSideBar sticky is rendered 1`] = `
<div
  class="euiPageSideBar euiPageSideBar--sticky"
/>
`;
